saas_pos/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: saas-pos
spec:
  selector:
    app: app
  ports:
    - port: 3000
      targetPort: 3000
