saas_pos/k8s/caddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-svc
  namespace: saas-pos
spec:
  selector:
    app: caddy
  ports:
    - port: 80
      targetPort: 80
