saas_pos/k8s/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-svc
  namespace: saas-pos
spec:
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: webhook-svc
  namespace: saas-pos
subsets:
  - addresses:
      - ip: 195.110.35.223
    ports:
      - port: 9000
